Refactor: Make collections unmodifiable and add default role keywords
Co-authored-by: dchipade <dchipade@gmail.com>